--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -143,6 +143,9 @@
     <ClInclude Include="AMesh.h" />
     <ClInclude Include="Asset.h" />
     <ClInclude Include="ATexture.h" />
+    <ClInclude Include="CMeshRender.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="CTransform.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Engine.h" />
@@ -151,6 +154,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="func.h" />
     <ClInclude Include="GameClient.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="PathMgr.h" />
@@ -161,16 +165,21 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="single.h" />
     <ClInclude Include="TimeMgr.h" />
+    <ClInclude Include="Ptr.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AGraphicShader.cpp" />
     <ClCompile Include="AMesh.cpp" />
     <ClCompile Include="Asset.cpp" />
     <ClCompile Include="ATexture.cpp" />
+    <ClCompile Include="CMeshRender.cpp" />
+    <ClCompile Include="Component.cpp" />
+    <ClCompile Include="CTransform.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Engine_init.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PathMgr.cpp" />
