--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -67,6 +67,21 @@
     <ClInclude Include="AGraphicShader.h">
       <Filter>GameEngine\04. Asset\03. GraphicShader</Filter>
     </ClInclude>
+    <ClInclude Include="Ptr.h">
+      <Filter>GameEngine\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>GameEngine\05. GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>GameEngine\06. Component</Filter>
+    </ClInclude>
+    <ClInclude Include="CTransform.h">
+      <Filter>GameEngine\06. Component\01. Transform</Filter>
+    </ClInclude>
+    <ClInclude Include="CMeshRender.h">
+      <Filter>GameEngine\06. Component\02. MeshRender</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="GameClient.ico">
@@ -115,6 +130,18 @@
     <ClCompile Include="AGraphicShader.cpp">
       <Filter>GameEngine\04. Asset\03. GraphicShader</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameEngine\05. GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>GameEngine\06. Component</Filter>
+    </ClCompile>
+    <ClCompile Include="CTransform.cpp">
+      <Filter>GameEngine\06. Component\01. Transform</Filter>
+    </ClCompile>
+    <ClCompile Include="CMeshRender.cpp">
+      <Filter>GameEngine\06. Component\02. MeshRender</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Default">
@@ -161,6 +188,24 @@
     </Filter>
     <Filter Include="GameEngine\04. Asset\03. GraphicShader">
       <UniqueIdentifier>{b3dbbc34-41e7-4e00-bb24-4b2735f33c8a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\05. GameObject">
+      <UniqueIdentifier>{2f4e610a-5ed3-4241-82c6-75a461290eb6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\06. Component">
+      <UniqueIdentifier>{fa7808e8-57cc-4da6-976e-9451af486df1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\06. Component\01. Transform">
+      <UniqueIdentifier>{8486a2f8-5243-4769-9928-9400c76796fc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\06. Component\03. Anymation">
+      <UniqueIdentifier>{6a26beeb-140e-4931-b8a2-6c4d86571b5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\06. Component\02. MeshRender">
+      <UniqueIdentifier>{d79c2502-1ec2-4a78-ac11-ff7969ae962d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameEngine\06. Component\04. Collider">
+      <UniqueIdentifier>{612b3bb4-69ce-4921-bae1-8be5f7c38076}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
