--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="LevelMgr.h" />
+    <ClInclude Include="AMaterial.h" />
     <ClInclude Include="PathMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="CPlayerProjectile.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="LevelMgr.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="AMaterial.cpp" />
     <ClCompile Include="PathMgr.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
