오브젝트를 생성하고 삭제하는 TaskMgr 추가

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -158,6 +158,7 @@ call CopyShader.bat</Command>
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CMeshRender.h" />
+    <ClInclude Include="CMissileScript.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="ConstBuffer.h" />
@@ -182,13 +183,13 @@ call CopyShader.bat</Command>
     <ClInclude Include="AMaterial.h" />
     <ClInclude Include="PathMgr.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="CPlayerProjectile.h" />
     <ClInclude Include="RenderMgr.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SimpleMath.h" />
     <ClInclude Include="struct.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="single.h" />
+    <ClInclude Include="TaskMgr.h" />
     <ClInclude Include="TimeMgr.h" />
     <ClInclude Include="Ptr.h" />
   </ItemGroup>
@@ -204,6 +205,7 @@ call CopyShader.bat</Command>
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CMeshRender.cpp" />
+    <ClCompile Include="CMissileScript.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ConstBuffer.cpp" />
     <ClCompile Include="CPlanetControllerScript.cpp" />
@@ -216,6 +218,7 @@ call CopyShader.bat</Command>
     <ClCompile Include="Engine_init.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="extern.cpp" />
+    <ClCompile Include="func.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="Layer.cpp" />
@@ -226,8 +229,8 @@ call CopyShader.bat</Command>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="CPlayerProjectile.cpp" />
     <ClCompile Include="RenderMgr.cpp" />
+    <ClCompile Include="TaskMgr.cpp" />
     <ClCompile Include="TimeMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
